--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-- потрібно вміти визначати чи це молот, чи перевернутий молот, щоб обов'язковою умовою була наявність трьох свічок, які підтверджують цей патерн
+- (done) потрібно вміти визначати чи це молот, чи перевернутий молот, щоб обов'язковою умовою була наявність трьох свічок, які підтверджують цей патерн
